--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,7 @@ crate-type = ["cdylib"]
 [dependencies]
 pyo3 = "0.20.0"
 rand = "0.8"
-numpy = "0.20"
-sprs = "0.11.1"
+
+[profile.release]
+lto = true
+codegen-units = 1
