--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,9 @@ name = "rusthypergraph"
 crate-type = ["cdylib"]
 
 [dependencies]
-pyo3 = "0.20.0"
 rand = "0.8"
+pyo3 = { version = "0.22.5", features = ["extension-module"] }
 
 [profile.release]
-lto = true
+lto = 'fat'
 codegen-units = 1
