--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ crate-type = ["cdylib"]
 [dependencies]
 rand = "0.8"
 pyo3 = { version = "0.22.5", features = ["extension-module"] }
+nalgebra = "0.33.2"
 
 [profile.release]
 lto = 'fat'
